--- a/P10.ipynb
+++ b/P10.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
     "\n",
     "        result_dict = dict(sorted(result_dict.items()))\n",
     "        for key, value in result_dict.items():\n",
-    "            f.write(str(key + 1) + ', ' + str(value) + '\\n')"
+    "            f.write(str(key + 1) + ', ' + str(value + 1) + '\\n')"
    ]
   },
   {
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -152,9 +152,9 @@
      "output_type": "stream",
      "text": [
       "['D1-UNC.csv', 'D2-UNC.csv', 'D3-UNC.csv']\n",
-      "D1-UNC.csv 1.0408194065093994\n",
-      "D2-UNC.csv 1.6676442623138428\n",
-      "D3-UNC.csv 0.3225059509277344\n"
+      "D1-UNC.csv 1.0126221179962158\n",
+      "D2-UNC.csv 1.5530200004577637\n",
+      "D3-UNC.csv 0.3162250518798828\n"
      ]
     }
    ],
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -191,9 +191,9 @@
      "output_type": "stream",
      "text": [
       "['D1-K=2.csv', 'D2-K=7.csv', 'D3-K=12.csv']\n",
-      "D1-K=2.csv 0.04006528854370117\n",
-      "D2-K=7.csv 0.15774035453796387\n",
-      "D3-K=12.csv 0.742286205291748\n"
+      "D1-K=2.csv 0.04101157188415527\n",
+      "D2-K=7.csv 0.17496609687805176\n",
+      "D3-K=12.csv 0.6961531639099121\n"
      ]
     }
    ],
